<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bikes_back"

    tools:context=".LandingPage">


    <Button
        android:id="@+id/about_us_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/map_button"
        app:layout_constraintEnd_toStartOf="@+id/map_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttons_style" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/map_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/about_us_button"
        app:layout_constraintTop_toBottomOf="@+id/welcome_msg"
        style="@style/buttons_style"/>


    <Button
        android:id="@+id/preferences_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferences_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/contact_button"
        app:layout_constraintEnd_toStartOf="@+id/contact_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttons_style"/>

    <Button
        android:id="@+id/contact_button"
        style="@style/buttons_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/preferences_button"
        app:layout_constraintTop_toBottomOf="@+id/map_button"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/aladin"
        android:text="@string/welcome_message"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>